// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsSupportItem should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.h5>
            MOCK_APP_NAME
          </mock-styled.h5>
          <mock-styled.h6>
            Will Test DevCo
          </mock-styled.h6>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#webInfographic_svg__a)"
                >
                  <path
                    d="M10.809 7.535v11.3l3.166-2.907L16.273 20l1.67-.796-2.213-3.917h4.272z"
                    fill="#798da1"
                  />
                  <path
                    d="M7.341 16.127a20 20 0 0 1-.934-4.185c.795.045 1.614.072 2.445.072h.035V10.6h-.035c-.921 0-1.787-.03-2.596-.079a31 31 0 0 1-.093-2.386c0-.853.031-1.642.085-2.387a43 43 0 0 1 5.193 0c0 .256 1.36 1.085 1.595 1.282-.013-.39-.037-.77-.064-1.15a25.5 25.5 0 0 1 4.594.863q.134.689.137 1.388 0 .698-.132 1.386c-.067.353-.464.946-.644 1.153a23 23 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.189 1.653-.504 3.997-.172 1.277-.443 5.297-.443 5.895-.577 0-1.23-.16-2.083-.16M5.598.584a24 24 0 0 0-.748 3.868 30 30 0 0 0-4.208.685 8.15 8.15 0 0 1 1.965-2.742A9 9 0 0 1 5.588.584zm0 15.107a9 9 0 0 1-2.993-1.808 8.15 8.15 0 0 1-1.973-2.748 30 30 0 0 0 4.208.688 24 24 0 0 0 .746 3.866zm-.887-5.3a25.4 25.4 0 0 1-4.572-.864 7 7 0 0 1 0-2.78c1.489-.426 3.02-.715 4.572-.864-.05.73-.079 1.483-.079 2.246 0 .764.03 1.535.079 2.263M8.853 4.26c-.84 0-1.658.025-2.445.07.161-1.426.477-2.833.94-4.201a9 9 0 0 1 3.023 0c.46 1.37.77 2.777.926 4.203a41 41 0 0 0-2.444-.072m4.007.19a24 24 0 0 0-.746-3.868 9 9 0 0 1 2.989 1.81 8.15 8.15 0 0 1 1.97 2.746 30 30 0 0 0-4.213-.687"
                    fill="#d8dee4"
                  />
                  <path
                    d="M7.343 16.127a20 20 0 0 1-.934-4.185c.794.045 1.613.072 2.445.072h.034V10.6h-.034c-.922 0-1.788-.03-2.597-.079a31 31 0 0 1-.093-2.385c0-.854.032-1.643.086-2.388a43 43 0 0 1 5.193 0c0 .256 1.36 1.085 1.594 1.282-.012-.39-.037-.77-.064-1.15 1.56.147 3.098.436 4.595.863q.133.689.136 1.388 0 .698-.131 1.386c-.068.353-.465.946-.645 1.153a23 23 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.188 1.653-.504 3.997-.171 1.277-.443 5.297-.443 5.895-.576 0-1.23-.16-2.082-.16"
                    fill="#798da1"
                  />
                </g>
                <defs>
                  <clippath
                    id="webInfographic_svg__a"
                  >
                    <path
                      d="M20 0H0v20h20z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Website
            </mock-styled.div>
            <mock-styled.div>
              <a
                href="https://foo.bar"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foo.bar
              </a>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.466 11.792a.8.8 0 0 0 .533.208.8.8 0 0 0 .534-.209L20 4c0-.5-.636-1-.969-1H.97C.636 3 0 3.5 0 4z"
                  fill="#798da1"
                />
                <path
                  d="M11.394 10.792a2.06 2.06 0 0 1-1.393.552 2.06 2.06 0 0 1-1.393-.552L1 3c-.5 0-1 .5-1 1v10.872c0 .606.226 1.187.628 1.615.402.429.946.67 1.515.67h15.714c.569 0 1.114-.241 1.515-.67.402-.428.628-1.01.628-1.615V4c0-.5-.5-1-1-1z"
                  fill="#d8dee4"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Support Email
            </mock-styled.div>
            <mock-styled.div>
              <a
                href="mailto:foo@bar.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                foo@bar.com
              </a>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#phoneInfographic_svg__a)"
                >
                  <path
                    d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a392 392 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.5.5 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a1 1 0 0 1 .056-.066q.217-.21.43-.423c.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115q-.563-.569-1.13-1.135c-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.2 19.2 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846"
                    fill="#798da1"
                  />
                  <path
                    d="M10.025 3.774a1.3 1.3 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827"
                    fill="#d8dee4"
                  />
                  <path
                    d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056"
                    fill="#d8dee4"
                  />
                </g>
                <defs>
                  <clippath
                    id="phoneInfographic_svg__a"
                  >
                    <path
                      d="M20 0H0v20h20z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Telephone
            </mock-styled.div>
            <mock-styled.div>
              07777777777
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#listInfographic_svg__a)"
                >
                  <path
                    d="M15.669 0H4.33C3.601 0 3 .578 3 1.28v13.23c0 .702.601 1.28 1.331 1.28h.795C5.255 13.313 7.402 11.33 10 11.33c2.62 0 4.767 1.982 4.874 4.459h.795c.73 0 1.331-.578 1.331-1.28V1.28C17 .578 16.399 0 15.669 0"
                    fill="#d8dee4"
                  />
                  <path
                    d="M10 10c-2.759 0-5 2.241-5 5s2.241 5 5 5 5-2.241 5-5-2.241-5-5-5m2.27 4.511-2.414 2.414a.79.79 0 0 1-.546.23.79.79 0 0 1-.546-.23l-1.207-1.207c-.316-.316-.316-.804 0-1.092.316-.316.805-.316 1.092 0l.661.661 1.868-1.868c.316-.316.804-.316 1.092 0 .316.288.316.776 0 1.092"
                    fill="#798da1"
                  />
                  <path
                    d="m12.27 14.511-2.414 2.414a.79.79 0 0 1-.546.23.79.79 0 0 1-.546-.23l-1.207-1.207c-.316-.316-.316-.804 0-1.092.316-.316.805-.316 1.092 0l.661.661 1.868-1.868c.316-.316.804-.316 1.092 0 .316.288.316.776 0 1.092M6.77 3.158c-.595 0-1.078.471-1.078 1.053 0 .58.483 1.052 1.077 1.052h6.462c.595 0 1.077-.471 1.077-1.052s-.482-1.053-1.077-1.053zM6.77 6.316c-.595 0-1.078.471-1.078 1.052s.483 1.053 1.077 1.053h6.462c.595 0 1.077-.471 1.077-1.053 0-.58-.482-1.052-1.077-1.052z"
                    fill="#fff"
                  />
                </g>
                <defs>
                  <clippath
                    id="listInfographic_svg__a"
                  >
                    <path
                      d="M20 0H0v20h20z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Terms and Conditions
            </mock-styled.div>
            <mock-styled.div>
              <a
                href="https://foo.bar"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foo.bar
              </a>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#shieldInfographic_svg__a)"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                >
                  <path
                    d="M17.609 3.516C14.918 3.516 13.548 0 9.976 0 6.453 0 5.083 3.516 2.39 3.516c-.195 0-.391.204-.391.458 0 7.95 1.077 11.873 7.78 15.95.147.102.293.102.391 0 6.753-4.077 7.829-8 7.829-15.95 0-.254-.195-.458-.391-.458"
                    fill="#798da1"
                  />
                  <path
                    d="M17.849 3.907C16.5 8 10.649 14.191 5.399 16.5 6.5 18 9 19.5 9.822 19.926c.15.099.301.099.402 0 6.923-3.98 7.977-7.81 7.977-15.571 0-.249-.29-.636-.351-.448"
                    fill="#d8dee4"
                  />
                  <path
                    d="m13.453 6.177-4.796 4.825-1.1-1.126c-1.415-1.367-3.459.723-2.123 2.17l2.202 2.172c.55.643 1.572.643 2.122 0l5.817-5.87c1.336-1.447-.786-3.618-2.122-2.17"
                    fill="#fff"
                  />
                </g>
                <defs>
                  <clippath
                    id="shieldInfographic_svg__a"
                  >
                    <path
                      d="M20 0H0v20h20z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Privacy Policy
            </mock-styled.div>
            <mock-styled.div>
              <a
                href="https://foo.bar"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foo.bar
              </a>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 40 40"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25.9 5H8v30h17.9c.607 0 1.1-.514 1.1-1.148V6.148C27 5.514 26.507 5 25.9 5"
                  fill="#d8dee4"
                />
                <path
                  d="M28 21h7v8h-7z"
                  fill="#fff"
                />
                <path
                  d="M37.242 18.103h-.926V14.69C36.316 11.549 33.486 9 30 9s-6.316 2.549-6.316 5.69v3.413h-.926c-.421 0-.758.304-.758.683v11.531c0 .372.337.683.758.683h14.484c.421 0 .758-.311.758-.683v-11.53c0-.38-.337-.684-.758-.684m-9.347 5.69c0-1.047.943-1.896 2.105-1.896s2.105.85 2.105 1.896c0 .607-.311 1.16-.842 1.517v1.518c0 .63-.564 1.137-1.263 1.137s-1.263-.508-1.263-1.137V25.31c-.53-.356-.842-.91-.842-1.517M26.21 14.69c0-1.882 1.7-3.414 3.789-3.414 2.088 0 3.79 1.532 3.79 3.414v3.413h-7.58z"
                  fill="#9faebc"
                />
                <path
                  d="M18.496.221a1.25 1.25 0 0 0-1.094-.16L2.83 4.747c-.496.16-.83.607-.83 1.111v28.282c0 .504.334.952.83 1.111l14.572 4.688c.373.12.78.057 1.094-.161a1.16 1.16 0 0 0 .504-.95V1.171c0-.377-.188-.73-.504-.95"
                  fill="#798da1"
                />
                <circle
                  cx="14"
                  cy="21"
                  fill="#9faebc"
                  r="2"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Pricing Policy
            </mock-styled.div>
            <mock-styled.div>
              <a
                href="https://foo.bar"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foo.bar
              </a>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname=""
    >
      <mock-styled.div
        classname=""
      >
        <mock-styled.h5>
          MOCK_APP_NAME
        </mock-styled.h5>
        <mock-styled.h6>
          Will Test DevCo
        </mock-styled.h6>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#webInfographic_svg__a)"
              >
                <path
                  d="M10.809 7.535v11.3l3.166-2.907L16.273 20l1.67-.796-2.213-3.917h4.272z"
                  fill="#798da1"
                />
                <path
                  d="M7.341 16.127a20 20 0 0 1-.934-4.185c.795.045 1.614.072 2.445.072h.035V10.6h-.035c-.921 0-1.787-.03-2.596-.079a31 31 0 0 1-.093-2.386c0-.853.031-1.642.085-2.387a43 43 0 0 1 5.193 0c0 .256 1.36 1.085 1.595 1.282-.013-.39-.037-.77-.064-1.15a25.5 25.5 0 0 1 4.594.863q.134.689.137 1.388 0 .698-.132 1.386c-.067.353-.464.946-.644 1.153a23 23 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.189 1.653-.504 3.997-.172 1.277-.443 5.297-.443 5.895-.577 0-1.23-.16-2.083-.16M5.598.584a24 24 0 0 0-.748 3.868 30 30 0 0 0-4.208.685 8.15 8.15 0 0 1 1.965-2.742A9 9 0 0 1 5.588.584zm0 15.107a9 9 0 0 1-2.993-1.808 8.15 8.15 0 0 1-1.973-2.748 30 30 0 0 0 4.208.688 24 24 0 0 0 .746 3.866zm-.887-5.3a25.4 25.4 0 0 1-4.572-.864 7 7 0 0 1 0-2.78c1.489-.426 3.02-.715 4.572-.864-.05.73-.079 1.483-.079 2.246 0 .764.03 1.535.079 2.263M8.853 4.26c-.84 0-1.658.025-2.445.07.161-1.426.477-2.833.94-4.201a9 9 0 0 1 3.023 0c.46 1.37.77 2.777.926 4.203a41 41 0 0 0-2.444-.072m4.007.19a24 24 0 0 0-.746-3.868 9 9 0 0 1 2.989 1.81 8.15 8.15 0 0 1 1.97 2.746 30 30 0 0 0-4.213-.687"
                  fill="#d8dee4"
                />
                <path
                  d="M7.343 16.127a20 20 0 0 1-.934-4.185c.794.045 1.613.072 2.445.072h.034V10.6h-.034c-.922 0-1.788-.03-2.597-.079a31 31 0 0 1-.093-2.385c0-.854.032-1.643.086-2.388a43 43 0 0 1 5.193 0c0 .256 1.36 1.085 1.594 1.282-.012-.39-.037-.77-.064-1.15 1.56.147 3.098.436 4.595.863q.133.689.136 1.388 0 .698-.131 1.386c-.068.353-.465.946-.645 1.153a23 23 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.188 1.653-.504 3.997-.171 1.277-.443 5.297-.443 5.895-.576 0-1.23-.16-2.082-.16"
                  fill="#798da1"
                />
              </g>
              <defs>
                <clippath
                  id="webInfographic_svg__a"
                >
                  <path
                    d="M20 0H0v20h20z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Website
          </mock-styled.div>
          <mock-styled.div>
            <a
              href="https://foo.bar"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://foo.bar
            </a>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.466 11.792a.8.8 0 0 0 .533.208.8.8 0 0 0 .534-.209L20 4c0-.5-.636-1-.969-1H.97C.636 3 0 3.5 0 4z"
                fill="#798da1"
              />
              <path
                d="M11.394 10.792a2.06 2.06 0 0 1-1.393.552 2.06 2.06 0 0 1-1.393-.552L1 3c-.5 0-1 .5-1 1v10.872c0 .606.226 1.187.628 1.615.402.429.946.67 1.515.67h15.714c.569 0 1.114-.241 1.515-.67.402-.428.628-1.01.628-1.615V4c0-.5-.5-1-1-1z"
                fill="#d8dee4"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Support Email
          </mock-styled.div>
          <mock-styled.div>
            <a
              href="mailto:foo@bar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              foo@bar.com
            </a>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#phoneInfographic_svg__a)"
              >
                <path
                  d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a392 392 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.5.5 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a1 1 0 0 1 .056-.066q.217-.21.43-.423c.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115q-.563-.569-1.13-1.135c-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.2 19.2 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846"
                  fill="#798da1"
                />
                <path
                  d="M10.025 3.774a1.3 1.3 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827"
                  fill="#d8dee4"
                />
                <path
                  d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056"
                  fill="#d8dee4"
                />
              </g>
              <defs>
                <clippath
                  id="phoneInfographic_svg__a"
                >
                  <path
                    d="M20 0H0v20h20z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Telephone
          </mock-styled.div>
          <mock-styled.div>
            07777777777
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#listInfographic_svg__a)"
              >
                <path
                  d="M15.669 0H4.33C3.601 0 3 .578 3 1.28v13.23c0 .702.601 1.28 1.331 1.28h.795C5.255 13.313 7.402 11.33 10 11.33c2.62 0 4.767 1.982 4.874 4.459h.795c.73 0 1.331-.578 1.331-1.28V1.28C17 .578 16.399 0 15.669 0"
                  fill="#d8dee4"
                />
                <path
                  d="M10 10c-2.759 0-5 2.241-5 5s2.241 5 5 5 5-2.241 5-5-2.241-5-5-5m2.27 4.511-2.414 2.414a.79.79 0 0 1-.546.23.79.79 0 0 1-.546-.23l-1.207-1.207c-.316-.316-.316-.804 0-1.092.316-.316.805-.316 1.092 0l.661.661 1.868-1.868c.316-.316.804-.316 1.092 0 .316.288.316.776 0 1.092"
                  fill="#798da1"
                />
                <path
                  d="m12.27 14.511-2.414 2.414a.79.79 0 0 1-.546.23.79.79 0 0 1-.546-.23l-1.207-1.207c-.316-.316-.316-.804 0-1.092.316-.316.805-.316 1.092 0l.661.661 1.868-1.868c.316-.316.804-.316 1.092 0 .316.288.316.776 0 1.092M6.77 3.158c-.595 0-1.078.471-1.078 1.053 0 .58.483 1.052 1.077 1.052h6.462c.595 0 1.077-.471 1.077-1.052s-.482-1.053-1.077-1.053zM6.77 6.316c-.595 0-1.078.471-1.078 1.052s.483 1.053 1.077 1.053h6.462c.595 0 1.077-.471 1.077-1.053 0-.58-.482-1.052-1.077-1.052z"
                  fill="#fff"
                />
              </g>
              <defs>
                <clippath
                  id="listInfographic_svg__a"
                >
                  <path
                    d="M20 0H0v20h20z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Terms and Conditions
          </mock-styled.div>
          <mock-styled.div>
            <a
              href="https://foo.bar"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://foo.bar
            </a>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#shieldInfographic_svg__a)"
                clip-rule="evenodd"
                fill-rule="evenodd"
              >
                <path
                  d="M17.609 3.516C14.918 3.516 13.548 0 9.976 0 6.453 0 5.083 3.516 2.39 3.516c-.195 0-.391.204-.391.458 0 7.95 1.077 11.873 7.78 15.95.147.102.293.102.391 0 6.753-4.077 7.829-8 7.829-15.95 0-.254-.195-.458-.391-.458"
                  fill="#798da1"
                />
                <path
                  d="M17.849 3.907C16.5 8 10.649 14.191 5.399 16.5 6.5 18 9 19.5 9.822 19.926c.15.099.301.099.402 0 6.923-3.98 7.977-7.81 7.977-15.571 0-.249-.29-.636-.351-.448"
                  fill="#d8dee4"
                />
                <path
                  d="m13.453 6.177-4.796 4.825-1.1-1.126c-1.415-1.367-3.459.723-2.123 2.17l2.202 2.172c.55.643 1.572.643 2.122 0l5.817-5.87c1.336-1.447-.786-3.618-2.122-2.17"
                  fill="#fff"
                />
              </g>
              <defs>
                <clippath
                  id="shieldInfographic_svg__a"
                >
                  <path
                    d="M20 0H0v20h20z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Privacy Policy
          </mock-styled.div>
          <mock-styled.div>
            <a
              href="https://foo.bar"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://foo.bar
            </a>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25.9 5H8v30h17.9c.607 0 1.1-.514 1.1-1.148V6.148C27 5.514 26.507 5 25.9 5"
                fill="#d8dee4"
              />
              <path
                d="M28 21h7v8h-7z"
                fill="#fff"
              />
              <path
                d="M37.242 18.103h-.926V14.69C36.316 11.549 33.486 9 30 9s-6.316 2.549-6.316 5.69v3.413h-.926c-.421 0-.758.304-.758.683v11.531c0 .372.337.683.758.683h14.484c.421 0 .758-.311.758-.683v-11.53c0-.38-.337-.684-.758-.684m-9.347 5.69c0-1.047.943-1.896 2.105-1.896s2.105.85 2.105 1.896c0 .607-.311 1.16-.842 1.517v1.518c0 .63-.564 1.137-1.263 1.137s-1.263-.508-1.263-1.137V25.31c-.53-.356-.842-.91-.842-1.517M26.21 14.69c0-1.882 1.7-3.414 3.789-3.414 2.088 0 3.79 1.532 3.79 3.414v3.413h-7.58z"
                fill="#9faebc"
              />
              <path
                d="M18.496.221a1.25 1.25 0 0 0-1.094-.16L2.83 4.747c-.496.16-.83.607-.83 1.111v28.282c0 .504.334.952.83 1.111l14.572 4.688c.373.12.78.057 1.094-.161a1.16 1.16 0 0 0 .504-.95V1.171c0-.377-.188-.73-.504-.95"
                fill="#798da1"
              />
              <circle
                cx="14"
                cy="21"
                fill="#9faebc"
                r="2"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Pricing Policy
          </mock-styled.div>
          <mock-styled.div>
            <a
              href="https://foo.bar"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://foo.bar
            </a>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsSupportItem should match a snapshot where details not supplied 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.h5>
            MOCK_APP_NAME
          </mock-styled.h5>
          <mock-styled.h6 />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#webInfographic_svg__a)"
                >
                  <path
                    d="M10.809 7.535v11.3l3.166-2.907L16.273 20l1.67-.796-2.213-3.917h4.272z"
                    fill="#798da1"
                  />
                  <path
                    d="M7.341 16.127a20 20 0 0 1-.934-4.185c.795.045 1.614.072 2.445.072h.035V10.6h-.035c-.921 0-1.787-.03-2.596-.079a31 31 0 0 1-.093-2.386c0-.853.031-1.642.085-2.387a43 43 0 0 1 5.193 0c0 .256 1.36 1.085 1.595 1.282-.013-.39-.037-.77-.064-1.15a25.5 25.5 0 0 1 4.594.863q.134.689.137 1.388 0 .698-.132 1.386c-.067.353-.464.946-.644 1.153a23 23 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.189 1.653-.504 3.997-.172 1.277-.443 5.297-.443 5.895-.577 0-1.23-.16-2.083-.16M5.598.584a24 24 0 0 0-.748 3.868 30 30 0 0 0-4.208.685 8.15 8.15 0 0 1 1.965-2.742A9 9 0 0 1 5.588.584zm0 15.107a9 9 0 0 1-2.993-1.808 8.15 8.15 0 0 1-1.973-2.748 30 30 0 0 0 4.208.688 24 24 0 0 0 .746 3.866zm-.887-5.3a25.4 25.4 0 0 1-4.572-.864 7 7 0 0 1 0-2.78c1.489-.426 3.02-.715 4.572-.864-.05.73-.079 1.483-.079 2.246 0 .764.03 1.535.079 2.263M8.853 4.26c-.84 0-1.658.025-2.445.07.161-1.426.477-2.833.94-4.201a9 9 0 0 1 3.023 0c.46 1.37.77 2.777.926 4.203a41 41 0 0 0-2.444-.072m4.007.19a24 24 0 0 0-.746-3.868 9 9 0 0 1 2.989 1.81 8.15 8.15 0 0 1 1.97 2.746 30 30 0 0 0-4.213-.687"
                    fill="#d8dee4"
                  />
                  <path
                    d="M7.343 16.127a20 20 0 0 1-.934-4.185c.794.045 1.613.072 2.445.072h.034V10.6h-.034c-.922 0-1.788-.03-2.597-.079a31 31 0 0 1-.093-2.385c0-.854.032-1.643.086-2.388a43 43 0 0 1 5.193 0c0 .256 1.36 1.085 1.594 1.282-.012-.39-.037-.77-.064-1.15 1.56.147 3.098.436 4.595.863q.133.689.136 1.388 0 .698-.131 1.386c-.068.353-.465.946-.645 1.153a23 23 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.188 1.653-.504 3.997-.171 1.277-.443 5.297-.443 5.895-.576 0-1.23-.16-2.082-.16"
                    fill="#798da1"
                  />
                </g>
                <defs>
                  <clippath
                    id="webInfographic_svg__a"
                  >
                    <path
                      d="M20 0H0v20h20z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Website
            </mock-styled.div>
            <mock-styled.div>
              Not Supplied
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.466 11.792a.8.8 0 0 0 .533.208.8.8 0 0 0 .534-.209L20 4c0-.5-.636-1-.969-1H.97C.636 3 0 3.5 0 4z"
                  fill="#798da1"
                />
                <path
                  d="M11.394 10.792a2.06 2.06 0 0 1-1.393.552 2.06 2.06 0 0 1-1.393-.552L1 3c-.5 0-1 .5-1 1v10.872c0 .606.226 1.187.628 1.615.402.429.946.67 1.515.67h15.714c.569 0 1.114-.241 1.515-.67.402-.428.628-1.01.628-1.615V4c0-.5-.5-1-1-1z"
                  fill="#d8dee4"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Support Email
            </mock-styled.div>
            <mock-styled.div>
              Not Supplied
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#phoneInfographic_svg__a)"
                >
                  <path
                    d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a392 392 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.5.5 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a1 1 0 0 1 .056-.066q.217-.21.43-.423c.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115q-.563-.569-1.13-1.135c-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.2 19.2 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846"
                    fill="#798da1"
                  />
                  <path
                    d="M10.025 3.774a1.3 1.3 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827"
                    fill="#d8dee4"
                  />
                  <path
                    d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056"
                    fill="#d8dee4"
                  />
                </g>
                <defs>
                  <clippath
                    id="phoneInfographic_svg__a"
                  >
                    <path
                      d="M20 0H0v20h20z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Telephone
            </mock-styled.div>
            <mock-styled.div>
              Not Supplied
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#listInfographic_svg__a)"
                >
                  <path
                    d="M15.669 0H4.33C3.601 0 3 .578 3 1.28v13.23c0 .702.601 1.28 1.331 1.28h.795C5.255 13.313 7.402 11.33 10 11.33c2.62 0 4.767 1.982 4.874 4.459h.795c.73 0 1.331-.578 1.331-1.28V1.28C17 .578 16.399 0 15.669 0"
                    fill="#d8dee4"
                  />
                  <path
                    d="M10 10c-2.759 0-5 2.241-5 5s2.241 5 5 5 5-2.241 5-5-2.241-5-5-5m2.27 4.511-2.414 2.414a.79.79 0 0 1-.546.23.79.79 0 0 1-.546-.23l-1.207-1.207c-.316-.316-.316-.804 0-1.092.316-.316.805-.316 1.092 0l.661.661 1.868-1.868c.316-.316.804-.316 1.092 0 .316.288.316.776 0 1.092"
                    fill="#798da1"
                  />
                  <path
                    d="m12.27 14.511-2.414 2.414a.79.79 0 0 1-.546.23.79.79 0 0 1-.546-.23l-1.207-1.207c-.316-.316-.316-.804 0-1.092.316-.316.805-.316 1.092 0l.661.661 1.868-1.868c.316-.316.804-.316 1.092 0 .316.288.316.776 0 1.092M6.77 3.158c-.595 0-1.078.471-1.078 1.053 0 .58.483 1.052 1.077 1.052h6.462c.595 0 1.077-.471 1.077-1.052s-.482-1.053-1.077-1.053zM6.77 6.316c-.595 0-1.078.471-1.078 1.052s.483 1.053 1.077 1.053h6.462c.595 0 1.077-.471 1.077-1.053 0-.58-.482-1.052-1.077-1.052z"
                    fill="#fff"
                  />
                </g>
                <defs>
                  <clippath
                    id="listInfographic_svg__a"
                  >
                    <path
                      d="M20 0H0v20h20z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Terms and Conditions
            </mock-styled.div>
            <mock-styled.div>
              Not Supplied
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#shieldInfographic_svg__a)"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                >
                  <path
                    d="M17.609 3.516C14.918 3.516 13.548 0 9.976 0 6.453 0 5.083 3.516 2.39 3.516c-.195 0-.391.204-.391.458 0 7.95 1.077 11.873 7.78 15.95.147.102.293.102.391 0 6.753-4.077 7.829-8 7.829-15.95 0-.254-.195-.458-.391-.458"
                    fill="#798da1"
                  />
                  <path
                    d="M17.849 3.907C16.5 8 10.649 14.191 5.399 16.5 6.5 18 9 19.5 9.822 19.926c.15.099.301.099.402 0 6.923-3.98 7.977-7.81 7.977-15.571 0-.249-.29-.636-.351-.448"
                    fill="#d8dee4"
                  />
                  <path
                    d="m13.453 6.177-4.796 4.825-1.1-1.126c-1.415-1.367-3.459.723-2.123 2.17l2.202 2.172c.55.643 1.572.643 2.122 0l5.817-5.87c1.336-1.447-.786-3.618-2.122-2.17"
                    fill="#fff"
                  />
                </g>
                <defs>
                  <clippath
                    id="shieldInfographic_svg__a"
                  >
                    <path
                      d="M20 0H0v20h20z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Privacy Policy
            </mock-styled.div>
            <mock-styled.div>
              Not Supplied
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-primary"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 40 40"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25.9 5H8v30h17.9c.607 0 1.1-.514 1.1-1.148V6.148C27 5.514 26.507 5 25.9 5"
                  fill="#d8dee4"
                />
                <path
                  d="M28 21h7v8h-7z"
                  fill="#fff"
                />
                <path
                  d="M37.242 18.103h-.926V14.69C36.316 11.549 33.486 9 30 9s-6.316 2.549-6.316 5.69v3.413h-.926c-.421 0-.758.304-.758.683v11.531c0 .372.337.683.758.683h14.484c.421 0 .758-.311.758-.683v-11.53c0-.38-.337-.684-.758-.684m-9.347 5.69c0-1.047.943-1.896 2.105-1.896s2.105.85 2.105 1.896c0 .607-.311 1.16-.842 1.517v1.518c0 .63-.564 1.137-1.263 1.137s-1.263-.508-1.263-1.137V25.31c-.53-.356-.842-.91-.842-1.517M26.21 14.69c0-1.882 1.7-3.414 3.789-3.414 2.088 0 3.79 1.532 3.79 3.414v3.413h-7.58z"
                  fill="#9faebc"
                />
                <path
                  d="M18.496.221a1.25 1.25 0 0 0-1.094-.16L2.83 4.747c-.496.16-.83.607-.83 1.111v28.282c0 .504.334.952.83 1.111l14.572 4.688c.373.12.78.057 1.094-.161a1.16 1.16 0 0 0 .504-.95V1.171c0-.377-.188-.73-.504-.95"
                  fill="#798da1"
                />
                <circle
                  cx="14"
                  cy="21"
                  fill="#9faebc"
                  r="2"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              Pricing Policy
            </mock-styled.div>
            <mock-styled.div>
              Free
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname=""
    >
      <mock-styled.div
        classname=""
      >
        <mock-styled.h5>
          MOCK_APP_NAME
        </mock-styled.h5>
        <mock-styled.h6 />
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#webInfographic_svg__a)"
              >
                <path
                  d="M10.809 7.535v11.3l3.166-2.907L16.273 20l1.67-.796-2.213-3.917h4.272z"
                  fill="#798da1"
                />
                <path
                  d="M7.341 16.127a20 20 0 0 1-.934-4.185c.795.045 1.614.072 2.445.072h.035V10.6h-.035c-.921 0-1.787-.03-2.596-.079a31 31 0 0 1-.093-2.386c0-.853.031-1.642.085-2.387a43 43 0 0 1 5.193 0c0 .256 1.36 1.085 1.595 1.282-.013-.39-.037-.77-.064-1.15a25.5 25.5 0 0 1 4.594.863q.134.689.137 1.388 0 .698-.132 1.386c-.067.353-.464.946-.644 1.153a23 23 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.189 1.653-.504 3.997-.172 1.277-.443 5.297-.443 5.895-.577 0-1.23-.16-2.083-.16M5.598.584a24 24 0 0 0-.748 3.868 30 30 0 0 0-4.208.685 8.15 8.15 0 0 1 1.965-2.742A9 9 0 0 1 5.588.584zm0 15.107a9 9 0 0 1-2.993-1.808 8.15 8.15 0 0 1-1.973-2.748 30 30 0 0 0 4.208.688 24 24 0 0 0 .746 3.866zm-.887-5.3a25.4 25.4 0 0 1-4.572-.864 7 7 0 0 1 0-2.78c1.489-.426 3.02-.715 4.572-.864-.05.73-.079 1.483-.079 2.246 0 .764.03 1.535.079 2.263M8.853 4.26c-.84 0-1.658.025-2.445.07.161-1.426.477-2.833.94-4.201a9 9 0 0 1 3.023 0c.46 1.37.77 2.777.926 4.203a41 41 0 0 0-2.444-.072m4.007.19a24 24 0 0 0-.746-3.868 9 9 0 0 1 2.989 1.81 8.15 8.15 0 0 1 1.97 2.746 30 30 0 0 0-4.213-.687"
                  fill="#d8dee4"
                />
                <path
                  d="M7.343 16.127a20 20 0 0 1-.934-4.185c.794.045 1.613.072 2.445.072h.034V10.6h-.034c-.922 0-1.788-.03-2.597-.079a31 31 0 0 1-.093-2.385c0-.854.032-1.643.086-2.388a43 43 0 0 1 5.193 0c0 .256 1.36 1.085 1.594 1.282-.012-.39-.037-.77-.064-1.15 1.56.147 3.098.436 4.595.863q.133.689.136 1.388 0 .698-.131 1.386c-.068.353-.465.946-.645 1.153a23 23 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.188 1.653-.504 3.997-.171 1.277-.443 5.297-.443 5.895-.576 0-1.23-.16-2.082-.16"
                  fill="#798da1"
                />
              </g>
              <defs>
                <clippath
                  id="webInfographic_svg__a"
                >
                  <path
                    d="M20 0H0v20h20z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Website
          </mock-styled.div>
          <mock-styled.div>
            Not Supplied
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.466 11.792a.8.8 0 0 0 .533.208.8.8 0 0 0 .534-.209L20 4c0-.5-.636-1-.969-1H.97C.636 3 0 3.5 0 4z"
                fill="#798da1"
              />
              <path
                d="M11.394 10.792a2.06 2.06 0 0 1-1.393.552 2.06 2.06 0 0 1-1.393-.552L1 3c-.5 0-1 .5-1 1v10.872c0 .606.226 1.187.628 1.615.402.429.946.67 1.515.67h15.714c.569 0 1.114-.241 1.515-.67.402-.428.628-1.01.628-1.615V4c0-.5-.5-1-1-1z"
                fill="#d8dee4"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Support Email
          </mock-styled.div>
          <mock-styled.div>
            Not Supplied
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#phoneInfographic_svg__a)"
              >
                <path
                  d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a392 392 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.5.5 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a1 1 0 0 1 .056-.066q.217-.21.43-.423c.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115q-.563-.569-1.13-1.135c-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.2 19.2 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846"
                  fill="#798da1"
                />
                <path
                  d="M10.025 3.774a1.3 1.3 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827"
                  fill="#d8dee4"
                />
                <path
                  d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056"
                  fill="#d8dee4"
                />
              </g>
              <defs>
                <clippath
                  id="phoneInfographic_svg__a"
                >
                  <path
                    d="M20 0H0v20h20z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Telephone
          </mock-styled.div>
          <mock-styled.div>
            Not Supplied
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#listInfographic_svg__a)"
              >
                <path
                  d="M15.669 0H4.33C3.601 0 3 .578 3 1.28v13.23c0 .702.601 1.28 1.331 1.28h.795C5.255 13.313 7.402 11.33 10 11.33c2.62 0 4.767 1.982 4.874 4.459h.795c.73 0 1.331-.578 1.331-1.28V1.28C17 .578 16.399 0 15.669 0"
                  fill="#d8dee4"
                />
                <path
                  d="M10 10c-2.759 0-5 2.241-5 5s2.241 5 5 5 5-2.241 5-5-2.241-5-5-5m2.27 4.511-2.414 2.414a.79.79 0 0 1-.546.23.79.79 0 0 1-.546-.23l-1.207-1.207c-.316-.316-.316-.804 0-1.092.316-.316.805-.316 1.092 0l.661.661 1.868-1.868c.316-.316.804-.316 1.092 0 .316.288.316.776 0 1.092"
                  fill="#798da1"
                />
                <path
                  d="m12.27 14.511-2.414 2.414a.79.79 0 0 1-.546.23.79.79 0 0 1-.546-.23l-1.207-1.207c-.316-.316-.316-.804 0-1.092.316-.316.805-.316 1.092 0l.661.661 1.868-1.868c.316-.316.804-.316 1.092 0 .316.288.316.776 0 1.092M6.77 3.158c-.595 0-1.078.471-1.078 1.053 0 .58.483 1.052 1.077 1.052h6.462c.595 0 1.077-.471 1.077-1.052s-.482-1.053-1.077-1.053zM6.77 6.316c-.595 0-1.078.471-1.078 1.052s.483 1.053 1.077 1.053h6.462c.595 0 1.077-.471 1.077-1.053 0-.58-.482-1.052-1.077-1.052z"
                  fill="#fff"
                />
              </g>
              <defs>
                <clippath
                  id="listInfographic_svg__a"
                >
                  <path
                    d="M20 0H0v20h20z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Terms and Conditions
          </mock-styled.div>
          <mock-styled.div>
            Not Supplied
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#shieldInfographic_svg__a)"
                clip-rule="evenodd"
                fill-rule="evenodd"
              >
                <path
                  d="M17.609 3.516C14.918 3.516 13.548 0 9.976 0 6.453 0 5.083 3.516 2.39 3.516c-.195 0-.391.204-.391.458 0 7.95 1.077 11.873 7.78 15.95.147.102.293.102.391 0 6.753-4.077 7.829-8 7.829-15.95 0-.254-.195-.458-.391-.458"
                  fill="#798da1"
                />
                <path
                  d="M17.849 3.907C16.5 8 10.649 14.191 5.399 16.5 6.5 18 9 19.5 9.822 19.926c.15.099.301.099.402 0 6.923-3.98 7.977-7.81 7.977-15.571 0-.249-.29-.636-.351-.448"
                  fill="#d8dee4"
                />
                <path
                  d="m13.453 6.177-4.796 4.825-1.1-1.126c-1.415-1.367-3.459.723-2.123 2.17l2.202 2.172c.55.643 1.572.643 2.122 0l5.817-5.87c1.336-1.447-.786-3.618-2.122-2.17"
                  fill="#fff"
                />
              </g>
              <defs>
                <clippath
                  id="shieldInfographic_svg__a"
                >
                  <path
                    d="M20 0H0v20h20z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Privacy Policy
          </mock-styled.div>
          <mock-styled.div>
            Not Supplied
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-primary"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25.9 5H8v30h17.9c.607 0 1.1-.514 1.1-1.148V6.148C27 5.514 26.507 5 25.9 5"
                fill="#d8dee4"
              />
              <path
                d="M28 21h7v8h-7z"
                fill="#fff"
              />
              <path
                d="M37.242 18.103h-.926V14.69C36.316 11.549 33.486 9 30 9s-6.316 2.549-6.316 5.69v3.413h-.926c-.421 0-.758.304-.758.683v11.531c0 .372.337.683.758.683h14.484c.421 0 .758-.311.758-.683v-11.53c0-.38-.337-.684-.758-.684m-9.347 5.69c0-1.047.943-1.896 2.105-1.896s2.105.85 2.105 1.896c0 .607-.311 1.16-.842 1.517v1.518c0 .63-.564 1.137-1.263 1.137s-1.263-.508-1.263-1.137V25.31c-.53-.356-.842-.91-.842-1.517M26.21 14.69c0-1.882 1.7-3.414 3.789-3.414 2.088 0 3.79 1.532 3.79 3.414v3.413h-7.58z"
                fill="#9faebc"
              />
              <path
                d="M18.496.221a1.25 1.25 0 0 0-1.094-.16L2.83 4.747c-.496.16-.83.607-.83 1.111v28.282c0 .504.334.952.83 1.111l14.572 4.688c.373.12.78.057 1.094-.161a1.16 1.16 0 0 0 .504-.95V1.171c0-.377-.188-.73-.504-.95"
                fill="#798da1"
              />
              <circle
                cx="14"
                cy="21"
                fill="#9faebc"
                r="2"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            Pricing Policy
          </mock-styled.div>
          <mock-styled.div>
            Free
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
